--- a/env.example
+++ b/env.example
@@ -8,8 +8,9 @@ OPENROUTER_API_KEY=your-api-key
 # Ollama (Local LLM)
 OLLAMA_BASE_URL=http://127.0.0.1:11434
 
-# Stock Market API Key
+# Stock Market API Key (Choose one)
 FINANCIAL_DATASETS_API_KEY=your-api-key
+FMP_API_KEY=your-fmp-api-key
 
 # Web Search API Keys (Exa preferred, Tavily fallback)
 EXASEARCH_API_KEY=your-api-key
