--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ yarn-error.log*
 # Dexter context files (offloaded tool outputs)
 .dexter/*
 
+# Beads (long-term memory / task tracking)
+.beads/
+
 
 logs/
 coverage.json
